# test_api_for_apprunner

./: Cargo.toml  Dockerfile
.github/workflows/: manual_deploy.yml
src/: main.rs
